--- a/.gitignore
+++ b/.gitignore
@@ -462,3 +462,7 @@ TSWLatexianTemp*
 # option is specified. Footnotes are the stored in a file with suffix Notes.bib.
 # Uncomment the next line to have this generated file ignored.
 #*Notes.bib
+
+## just to prevent pushing personal data
+tex/content.tex
+tex/name.tex
